localize header content

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -3,4 +3,7 @@ topbar.genres=Genres
 topbar.news=News
 topbar.popular=Popular
 topbar.authors=Authors
+header.searchButton=Search
+header.searchPlaceholder=Search over 30 million book titles
+header.showNavigation=Show Navigation
 footer.chooseLanguage=Choose language
