--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -3,5 +3,8 @@ topbar.genres=Жанры
 topbar.news=Новинки
 topbar.popular=Популярное
 topbar.authors=Авторы
+header.searchButton=Поиск
+header.searchPlaceholder=Поиск по более 30 миллионам названий книг
+header.showNavigation=Показать навигацию
 footer.chooseLanguage=Выбор языка
 
