localize footer content

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -7,3 +7,8 @@ header.searchButton=Search
 header.searchPlaceholder=Search over 30 million book titles
 header.showNavigation=Show Navigation
 footer.chooseLanguage=Choose language
+footer.login=Login
+footer.documents=Documents
+footer.about=About
+footer.help=Help
+footer.contacts=Contacts
