--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -7,4 +7,9 @@ header.searchButton=Поиск
 header.searchPlaceholder=Поиск по более 30 миллионам названий книг
 header.showNavigation=Показать навигацию
 footer.chooseLanguage=Выбор языка
+footer.login=Войти
+footer.documents=Документы
+footer.about=О компании
+footer.help=Помощь
+footer.contacts=Контакты
 
