localize main content

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -12,3 +12,7 @@ footer.documents=Documents
 footer.about=About
 footer.help=Help
 footer.contacts=Contacts
+main.recommended=Recommended
+main.news=News
+main.popular=Popular
+main.tags=Books by tags
