--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -4,7 +4,7 @@ topbar.news=Новинки
 topbar.popular=Популярное
 topbar.authors=Авторы
 header.searchButton=Поиск
-header.searchPlaceholder=Поиск по более 30 миллионам названий книг
+header.searchPlaceholder=Поиск среди более 30 миллионов книг
 header.showNavigation=Показать навигацию
 footer.chooseLanguage=Выбор языка
 footer.login=Войти
@@ -12,4 +12,7 @@ footer.documents=Документы
 footer.about=О компании
 footer.help=Помощь
 footer.contacts=Контакты
-
+main.recommended=Рекомендуемое
+main.news=Новинки
+main.popular=Популярное
+main.tags=Книги по тегам
