localize: about, cart, contacts, faq, search, popular, postponed, recent

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -16,3 +16,14 @@ main.recommended=Recommended
 main.news=News
 main.popular=Popular
 main.tags=Books by tags
+path.books=Books
+button.more=More
+search.searchPlaceholder=Technique
+postponed=Postponed
+price=Price
+button.buy=Buy
+button.delete=Delete
+button.buyAll=Buy all
+button.postpone=Postpone
+cart=Cart
+total=Total
