--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -14,5 +14,15 @@ footer.help=Помощь
 footer.contacts=Контакты
 main.recommended=Рекомендуемое
 main.news=Новинки
-main.popular=Популярное
 main.tags=Книги по тегам
+path.books=Книги
+button.more=Показать еще
+search.searchPlaceholder=Техника
+postponed=Отложенное
+price=Цена
+button.buy=Купить
+button.delete=Удалить
+button.buyAll=Купить все
+button.postpone=Отложить
+cart=Корзина
+total=Итого
