--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -27,3 +27,13 @@ button.buyAll=Buy all
 button.postpone=Postpone
 cart=Cart
 total=Total
+login=Login
+login.title=Enter e-mail or phone
+phone=Phone
+phone.placeholder=Enter phone
+email.placeholder=Enter e-mail
+next=Next
+register.email=A login link and a code have been sent to your e-mail. Follow the link or enter the code below:
+register.phone=A login link and a code have been sent to your phone. Follow the link or enter the code below:
+register.code=Code
+register=Register
