--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -26,3 +26,13 @@ button.buyAll=Купить все
 button.postpone=Отложить
 cart=Корзина
 total=Итого
+login=Вход
+login.title=Введите e-mail или телефон
+phone=Телефон
+phone.placeholder=Введите телефон
+email.placeholder=Введите e-mail
+next=Далее
+register.email=На Ваш e-mail отправлена ссылка для входа и код. Перейдите по ссылке или введите код ниже:
+register.phone=На Ваш телефон отправлена ссылка для входа и код. Перейдите по ссылке или введите код ниже:
+register.code=Код
+register=Зарегистрироваться
