--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -37,3 +37,11 @@ register.email=A login link and a code have been sent to your e-mail. Follow the
 register.phone=A login link and a code have been sent to your phone. Follow the link or enter the code below:
 register.code=Code
 register=Register
+faq.title=Frequently asked Questions:
+telegram=Telegram-bot:
+form.ask=Write to us:
+form.name=Enter your name
+form.email=Enter your e-mail
+form.topic=Enter topic
+form.message=Enter message
+button.send=Send
