some fixes about localize

--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -3,6 +3,7 @@ topbar.genres=Жанры
 topbar.news=Новинки
 topbar.popular=Популярное
 topbar.authors=Авторы
+
 header.searchButton=Поиск
 header.searchPlaceholder=Поиск среди более 30 миллионов книг
 header.showNavigation=Показать навигацию
@@ -13,34 +14,35 @@ footer.about=О компании
 footer.help=Помощь
 footer.contacts=Контакты
 main.recommended=Рекомендуемое
-main.news=Новинки
 main.tags=Книги по тегам
-path.books=Книги
+main.books=Книги
 button.more=Показать еще
-search.searchPlaceholder=Техника
-postponed=Отложенное
-price=Цена
 button.buy=Купить
 button.delete=Удалить
 button.buyAll=Купить все
 button.postpone=Отложить
-cart=Корзина
+button.send=Отправить
+search.searchPlaceholder=Техника
+postponed=Отложенное
+price=Цена
 total=Итого
+next=Далее
+telegram=Телеграм-бот:
+cart=Корзина
 login=Вход
 login.title=Введите e-mail или телефон
 phone=Телефон
 phone.placeholder=Введите телефон
 email.placeholder=Введите e-mail
-next=Далее
 register.email=На Ваш e-mail отправлена ссылка для входа и код. Перейдите по ссылке или введите код ниже:
 register.phone=На Ваш телефон отправлена ссылка для входа и код. Перейдите по ссылке или введите код ниже:
 register.code=Код
 register=Зарегистрироваться
 faq.title=Наиболее частые вопросы:
-telegram=Телеграм-бот:
 form.ask=Напишите нам:
 form.name=Введите Имя
 form.email=Введите e-mail
 form.topic=Введите тему
 form.message=Введите сообщение
-button.send=Отправить
+recent.from=с
+recent.to=по
