--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -3,6 +3,7 @@ topbar.genres=Genres
 topbar.news=News
 topbar.popular=Popular
 topbar.authors=Authors
+
 header.searchButton=Search
 header.searchPlaceholder=Search over 30 million book titles
 header.showNavigation=Show Navigation
@@ -13,35 +14,35 @@ footer.about=About
 footer.help=Help
 footer.contacts=Contacts
 main.recommended=Recommended
-main.news=News
-main.popular=Popular
 main.tags=Books by tags
-path.books=Books
-button.more=More
-search.searchPlaceholder=Technique
-postponed=Postponed
-price=Price
+main.books=Books
+button.more=Show more
 button.buy=Buy
 button.delete=Delete
 button.buyAll=Buy all
 button.postpone=Postpone
-cart=Cart
+button.send=Send
+search.searchPlaceholder=Technique
+postponed=Postponed
+price=Price
 total=Total
+next=Next
+telegram=Telegram-bot:
+cart=Cart
 login=Login
 login.title=Enter e-mail or phone
 phone=Phone
 phone.placeholder=Enter phone
 email.placeholder=Enter e-mail
-next=Next
 register.email=A login link and a code have been sent to your e-mail. Follow the link or enter the code below:
 register.phone=A login link and a code have been sent to your phone. Follow the link or enter the code below:
 register.code=Code
 register=Register
 faq.title=Frequently asked Questions:
-telegram=Telegram-bot:
 form.ask=Write to us:
 form.name=Enter your name
 form.email=Enter your e-mail
 form.topic=Enter topic
 form.message=Enter message
-button.send=Send
+recent.from=from
+recent.to=to
